feat: implement reporg CLI tool for repository search
Implement a CLI tool that searches Git repositories using ripgrep and outputs results in TSV format with GitHub URLs.

Key features:
- Search multiple Git repositories with a single pattern
- Validate repository roots and deduplicate paths
- Parse ripgrep JSON output for precise match extraction
- Generate GitHub blob URLs with line numbers
- Output TSV format: repository name, file path, matched line, GitHub URL

Package structure:
- internal/git/github.go: GitHub URL handling (remote, parse, build)
- internal/git/repo.go: Repository validation and operations
- internal/search/ripgrep.go: Ripgrep execution and JSON parsing
- internal/output/tsv.go: TSV output generation
- main.go: CLI entry point and orchestration

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,1 +1,6 @@
 FROM mcr.microsoft.com/devcontainers/go:1-1.24-bookworm
+
+# Install ripgrep
+RUN curl -LO https://github.com/BurntSushi/ripgrep/releases/download/15.1.0/ripgrep_15.1.0-1_amd64.deb \
+    && dpkg -i ripgrep_15.1.0-1_amd64.deb \
+    && rm ripgrep_15.1.0-1_amd64.deb
