feat: add Homebrew support via GoReleaser
Add Homebrew cask configuration to automatically publish releases to onozaty/homebrew-tap. This enables users to install reporg via Homebrew with automatic dependency resolution for ripgrep.

Changes:
- Add homebrew_casks section to .goreleaser.yml
- Configure automatic Formula updates to onozaty/homebrew-tap
- Set ripgrep as a Formula dependency (auto-installs with reporg)
- Add HOMEBREW_TAP_TOKEN environment variable to release workflow
- Update README.md and README.ja.md with Homebrew installation instructions

Users can now install with: brew install onozaty/tap/reporg

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,3 +36,15 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+homebrew_casks:
+  - name: reporg
+    repository:
+      owner: onozaty
+      name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
+    description: "CLI tool that searches Git repositories using ripgrep and outputs results in TSV format"
+    homepage: "https://github.com/onozaty/reporg"
+    license: MIT
+    skip_upload: auto
+    dependencies:
+      - formula: ripgrep
