--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,3 +48,15 @@ homebrew_casks:
     skip_upload: auto
     dependencies:
       - formula: ripgrep
+scoops:
+  - name: reporg
+    repository:
+      owner: onozaty
+      name: scoop-bucket
+      token: "{{ .Env.SCOOP_BUCKET_TOKEN }}"
+    description: "CLI tool that searches Git repositories using ripgrep and outputs results in TSV format"
+    homepage: "https://github.com/onozaty/reporg"
+    license: MIT
+    skip_upload: auto
+    depends:
+      - ripgrep
